--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -2,14 +2,20 @@
 <section id="contact">
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 text-center">
+            <div class="col-lg-12 text-center">
                 <h2 class="section-heading">{{ with .Site.Params.contact.headline }}{{ . }}{{ end }}</h2>
                 <hr class="primary">
                 <p>{{ with .Site.Params.contact.description }}{{ . | markdownify }}{{ end }}</p>
             </div>
-            <div class="col-lg-4 col-lg-offset-2 text-center">
+        </div>
+        <div class="row">
+            <div class="col-lg-4 text-center">
                 <i class="fa fa-phone fa-3x wow bounceIn"></i>
                 <p>{{ with .Site.Params.contact.phone }}{{ . }}{{ end }}</p>
+            </div>
+            <div class="col-lg-4 text-center">
+                <i class="fa fa-facebook fa-3x wow bounceIn"></i>
+                <p><a href="http://facebook.com/{{ with .Site.Params.contact.facebook }}{{ . }}{{ end }}">Facebook</a></p>
             </div>
             <div class="col-lg-4 text-center">
                 <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
